# bmhero-arena

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.github/workflows/: determinism.yml  netcode.yml
docs/: bmhero-battle-arena-design.md  bmhero-multiplayer-architecture.md  bmhero-player-movement-re.md  bmhero-recomp-integration-notes.md  bmhero-recomp-patch-machinery-reference.md
docs/superpowers/plans/: 2026-07-18-sdl-debug-viewer.md  2026-07-19-a1-0-recomp-fork-build.md  2026-07-19-a1-1a-arena-submodule-proof.md  2026-07-19-a1-1b-battle-menu-entry.md  2026-07-19-a1-1b-ii-map-shell-warp.md  2026-07-19-a2-syncsession.md  2026-07-19-bomb-mechanics.md  2026-07-20-a1-2a-puppet-player-object.md  2026-07-20-a1-2b-spawn-puppet-4-bombers.md  2026-07-21-a1-2b-placeholder-actors.md  2026-07-21-a1-2c-blast-effects.md  2026-07-21-a1-2c-bomb-rendering.md  2026-07-22-a1-2d-real-bomber-mesh.md  2026-07-22-a1-2e-camera-relative-input.md  2026-07-22-a1-3-movement-dynamics.md
docs/superpowers/specs/: 2026-07-18-sdl-debug-viewer-design.md  2026-07-19-a1-0-recomp-fork-build-design.md  2026-07-19-a1-1a-arena-submodule-proof-design.md  2026-07-19-a1-1b-battle-menu-entry-design.md  2026-07-19-a1-1b-ii-map-shell-warp-design.md  2026-07-19-a2-syncsession-design.md  2026-07-19-bomb-mechanics-correction-design.md  2026-07-20-a1-2a-puppet-player-object-design.md  2026-07-20-a1-2b-spawn-puppet-4-bombers-design.md  2026-07-21-a1-2b-placeholder-actors-design.md  2026-07-21-a1-2c-blast-effects-design.md  2026-07-21-a1-2c-bomb-rendering-design.md  2026-07-22-a1-2d-real-bomber-mesh-design.md  2026-07-22-a1-2e-camera-relative-input-design.md  2026-07-22-a1-2f-boot-soak-harness-design.md  2026-07-22-a1-3-movement-dynamics-design.md  2026-07-24-a1-4-set-kick-animations-design.md
src/arena/: arena_geom.h  arena_math.h  arena_sim.c  arena_sim.h  arena_sintab.h  arena_state.h  arena_tuning.h
src/netplay/: sync_session.c  sync_session.h
tests/: run_p2p_test.sh  test_bomb_mechanics.c  test_determinism.c  test_movement.c  test_netplay_link.c  test_netplay_p2p.c  test_netplay_stress.c  test_viewer_cam.c  test_viewer_clock.c
tools/viewer/: viewer_cam.c  viewer_cam.h  viewer_clock.c  viewer_clock.h  viewer_draw.c  viewer_draw.h  viewer_main.c
